# yt

./: .env  Dockerfile  MANIFEST.in  README.md  RENDER_DEPLOYMENT.md  VPN_SETUP_GUIDE.md  app.py  cookies.txt  cookies.txt.example  models.py  proxy.json  pyproject.toml  render.yaml  render_requirements.txt  replit.nix  requirements.txt  setup.py  start.sh  utils.py  vpn-config.ovpn  vpn-config.ovpn.example  web_app.py  wpr.json  youtube_audio_player.py
.github/workflows/: cookies.yml  test-proxies.yml
attached_assets/: Pasted--Installing-requests-2-32-3-Installing-rich-13-9-4-Transferred-167MB-in-7s-Extraction-t-1742977224000.txt
modules/: __init__.py  audio_player.py  playlist_manager.py  terminal_ui.py  youtube_client.py
static/css/: custom.css  style.css
static/js/: app.js  player.js
templates/: base.html  error.html  index.html  layout.html
utils/: client_secrets.json  cookies.txt  youtube.py
