[tool.poetry]
name = "youtube-audio-player"
version = "0.1.0"
description = "A Python-based YouTube audio player web application that allows you to search, extract, and play audio from YouTube videos"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/youtube-audio-player"
keywords = ["youtube", "audio", "player", "music", "streaming", "web", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Framework :: Flask",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = "^3.1.0"
flask-cors = "^5.0.1"
innertube = "^2.1.16"
pytube = "^15.0.0"
requests = "^2.32.3"
setuptools = "^78.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
youtube-web = "web_app:app.run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
